extended/beginner/solutions/troubleshooting-essentials/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      serviceAccountName: webapp-sa
      containers:
      - name: webapp
        image: gcr.io/google-samples/hello-app:1.0
        ports:
        - containerPort: 8080
